--- a/docs/source/getting-started.mdx
+++ b/docs/source/getting-started.mdx
@@ -257,7 +257,7 @@ We're up and running!
 
 We can now execute GraphQL queries on our server. To execute our first query, we can use [**Apollo Sandbox**](/studio/explorer/sandbox/).
 
-Visit `http://localhost:4000` in your browser, which will opent the Apollo Studio Sandbox:
+Visit `http://localhost:4000` in your browser, which will open the Apollo Studio Sandbox:
 
 <img class="screenshot" src="./images/sandbox.jpeg" alt="Apollo Sandbox"/>
 
